<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFDE04"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_text"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/start_button"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/start_button"
        android:textColor="#0336ff"
        android:background="@drawable/rounded_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>