<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFDE04"
        android:padding="16dp">

    <TextView
            style="@style/Text_style"
            android:id="@+id/score"
            android:text="@string/score"
            android:textSize="15sp"
            android:freezesText="true"/>

    <TextView
            style="@style/Text_style"
            android:id="@+id/question_no"
            android:text="@string/total_questions"
            android:layout_below="@id/score"
            android:textSize="15sp"
            android:freezesText="true"/>

    <TextView
            style="@style/Text_style"
            android:id="@+id/timer"
            android:text="@string/timer"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="40sp"
            android:freezesText="true"/>

    <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Here is the sample question  Here is the sample question"
            android:layout_above="@id/radio_group"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:freezesText="true"/>

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

        <RadioButton
                style="@style/Text_style"
                android:id="@+id/radio_button1"
                android:text="option1"
                android:freezesText="true"/>

        <RadioButton
                style="@style/Text_style"
                android:id="@+id/radio_button2"
                android:text="option2"
                android:freezesText="true"/>

        <RadioButton
                style="@style/Text_style"
                android:id="@+id/radio_button3"
                android:text="option3"
                android:freezesText="true"/>

    </RadioGroup>

    <Button
            android:id="@+id/confirm_next"
            android:textColor="#0336ff"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_answer"
            android:layout_below="@id/radio_group"
            android:layout_marginTop="8dp"/>
</RelativeLayout>